# File and Version Information:
#  $Id$
#  $Revision$
#
# Description:
#  ChangeLog file for package CalibManager
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

2015-05-13 Mikhail S. Dubrovin
Tag: V00-00-90
- Save Princeton calib files WITH metadata, modified: ConfigFileGenerator.py and psana-module-peds-aver-princeton.cfg (PSAS-6) 
	
2015-05-04 Mikhail S. Dubrovin
Tag: V00-00-89
- add parameter cp.mask_rms_thr_min and propagate it in calibman/calibrun code along with cp.mask_rms_thr (PSAS-6) 
	
2015-04-17 Mikhail S. Dubrovin
Tag: V00-00-88
- app/calibrun - return check LUSTRE version on start-up

2015-04-17 Mikhail S. Dubrovin
Tag: V00-00-87
- add live mode for ffb, fix info messages about batch queue and farm (PSAS-6)
- app/calibrun - add comment about ffb
	       - do not check LUSTRE version on start-up
- ConfigFileGenerator - add in dataset defenition ":dir=..." for non-standard directory and ":live" for ffb.
- BatchJobPedestals - use command "psana -c <config-file.cfg>" with files defined inside. Fixes xtc/file (missing slash).
- CommandLineCalib - extend status message when batch is running.
- ConfigParametersForApp - add list of farms and dictionary for {queue:farm}
- fix info messages about batch system

2015-04-09 Mikhail S. Dubrovin
Tag: V00-00-86
- in *.py replace ==None -> is None, !=None -> is not None
	
2015-03-30 Mikhail S. Dubrovin
Tag: V00-00-85
- in Frame add method setBoarderVisible
- add GUIAlignment, and widget wrapper GUIROIMask  (PSAS-6, PSAS-11)
- replace "!= None" with "is not None" in many modules.
- In many modules use class Frame in stead of QFrame.
- in GUITabs, GUIConfig, GUIFileManager, GUIGeometry add self.gui_win.setVisible(True) in order to make visible widgets defined as Frame.
	
2015-03-12 Mikhail S. Dubrovin
Tag: V00-00-84