@@ -13,6 +13,10 @@ Please describe any modifications that you made to the package in the
 reverse time order.
 
 2015-05-13 Mikhail S. Dubrovin
+Tag: V00-00-91
+- PlotImgSpeWidget.py - add number of entries to histogram info.
+	
+2015-05-13 Mikhail S. Dubrovin
 Tag: V00-00-90
 - Save Princeton calib files WITH metadata, modified: ConfigFileGenerator.py and psana-module-peds-aver-princeton.cfg (PSAS-6) 
 	
